--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "antd": "^5.8.5",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.30",
-    "postcss-cli": "^10.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "semantic-ui-css": "^2.5.0",
@@ -46,6 +45,7 @@
     "events": "3.3.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "5.5.0",
+    "postcss-loader": "^7.3.3",
     "process": "0.11.10",
     "stream-browserify": "3.0.0",
     "style-loader": "^3.3.3",
