--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "postcss": "^8.4.30",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-grid-layout": "^1.4.2",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.4",
     "tailwindcss": "^3.3.3"
@@ -36,6 +37,7 @@
     "@babel/preset-react": "^7.22.15",
     "@svgr/webpack": "^8.1.0",
     "@types/react": "^18.2.21",
+    "@types/react-grid-layout": "^1.3.3",
     "assert": "2.0.0",
     "babel-loader": "^9.1.3",
     "buffer": "6.0.3",
