--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-grid-layout": "^1.4.2",
+    "react-image-file-resizer": "^0.4.8",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.4",
     "tailwindcss": "^3.3.3",
