Mobile freindly searchbar with icons.

--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "@dfinity/agent": "^0.19.2",
     "@dfinity/candid": "^0.19.2",
     "@dfinity/principal": "^0.19.2",
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "antd": "^5.8.5",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.30",
