Separated backend into utils, and minor UI tweaks.

--- a/.env
+++ b/.env
@@ -1,15 +1,15 @@
 
 # DFX CANISTER ENVIRONMENT VARIABLES
 DFX_VERSION='0.14.3'
-DFX_NETWORK='ic'
+DFX_NETWORK='local'
 CANISTER_CANDID_PATH_ugd_backend='/home/evan/UncensoredGreatsDAO/src/ugd_backend/backend.did'
 CANISTER_CANDID_PATH_UGD_BACKEND='/home/evan/UncensoredGreatsDAO/src/ugd_backend/backend.did'
-UGD_FRONTEND_CANISTER_ID='xo3nl-yaaaa-aaaap-abl4q-cai'
-CANISTER_ID_UGD_FRONTEND='xo3nl-yaaaa-aaaap-abl4q-cai'
-CANISTER_ID_ugd_frontend='xo3nl-yaaaa-aaaap-abl4q-cai'
-UGD_BACKEND_CANISTER_ID='xj2l7-vyaaa-aaaap-abl4a-cai'
-CANISTER_ID_UGD_BACKEND='xj2l7-vyaaa-aaaap-abl4a-cai'
-CANISTER_ID_ugd_backend='xj2l7-vyaaa-aaaap-abl4a-cai'
-CANISTER_ID='xo3nl-yaaaa-aaaap-abl4q-cai'
-CANISTER_CANDID_PATH='/home/evan/UncensoredGreatsDAO/.dfx/ic/canisters/ugd_frontend/assetstorage.did'
+UGD_FRONTEND_CANISTER_ID='bd3sg-teaaa-aaaaa-qaaba-cai'
+CANISTER_ID_UGD_FRONTEND='bd3sg-teaaa-aaaaa-qaaba-cai'
+CANISTER_ID_ugd_frontend='bd3sg-teaaa-aaaaa-qaaba-cai'
+UGD_BACKEND_CANISTER_ID='bkyz2-fmaaa-aaaaa-qaaaq-cai'
+CANISTER_ID_UGD_BACKEND='bkyz2-fmaaa-aaaaa-qaaaq-cai'
+CANISTER_ID_ugd_backend='bkyz2-fmaaa-aaaaa-qaaaq-cai'
+CANISTER_ID='bd3sg-teaaa-aaaaa-qaaba-cai'
+CANISTER_CANDID_PATH='/home/evan/UncensoredGreatsDAO/.dfx/local/canisters/ugd_frontend/assetstorage.did'
 # END DFX CANISTER ENVIRONMENT VARIABLES
