--- a/src/ugd_backend/Cargo.toml
+++ b/src/ugd_backend/Cargo.toml
@@ -12,4 +12,4 @@ ic-cdk = "0.7.0"
 # ic-cdk-macros = "0.7.1"
 ic-cdk-timers = "0.1"
 # serde_json = "1.0"
-# serde = { version = "1.0", features = ["derive"] }
+serde = { version = "1.0", features = ["derive"] }
