--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,6 @@
     "jsx": "react"
   },
   // "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/types/*.ts"],
-  "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/types/*.ts", "src/ugd_frontend/src/VirtualBookshelf.tsx", "src/ugd_frontend/src/header/Tabs.jsx", "src/ugd_frontend/src/cards/MessageCard.tsx", "src/ugd_frontend/src/header/AuthorFilter.jsx", "src/ugd_frontend/src/header/SearchBar.jsx"],
+  "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/types/*.ts", "src/ugd_frontend/src/VirtualBookshelf.tsx", "src/ugd_frontend/src/header/Tabs.jsx", "src/ugd_frontend/src/cards/MessageCard.tsx", "src/ugd_frontend/src/header/AuthorFilter.jsx", "src/ugd_frontend/src/header/SearchBar.jsx", "src/ugd_frontend/utils/useAuthorBooks.jsx"],
   "exclude": ["node_modules"]
 }
