--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "postcss-loader": "^7.3.3",
     "postcss-nested": "^6.0.1",
     "process": "0.11.10",
+    "react-router-dom": "^6.17.0",
     "stream-browserify": "3.0.0",
     "style-loader": "^3.3.3",
     "terser-webpack-plugin": "^5.3.3",
