--- a/package.json
+++ b/package.json
@@ -35,6 +35,9 @@
     "react-rating-star-with-type": "^1.2.1",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.4",
+    "slate": "^0.100.0",
+    "slate-history": "^0.100.0",
+    "slate-react": "^0.100.0",
     "tailwindcss": "^3.3.3",
     "webfontloader": "^1.6.28"
   },
