--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@dfinity/agent": "^0.19.2",
     "@dfinity/candid": "^0.19.2",
     "@dfinity/principal": "^0.19.2",
+    "@emotion/css": "^11.11.2",
+    "@emotion/react": "^11.11.1",
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
@@ -47,6 +49,7 @@
     "@babel/preset-react": "^7.22.15",
     "@svgr/webpack": "^8.1.0",
     "@types/react": "^18.2.21",
+    "@types/react-dom": "^18.2.14",
     "@types/react-grid-layout": "^1.3.3",
     "assert": "2.0.0",
     "babel-loader": "^9.1.3",
