--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@emotion/css": "^11.11.2",
     "@emotion/react": "^11.11.1",
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-regular-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@types/react-star-rating-component": "^1.4.3",
@@ -40,6 +41,7 @@
     "slate": "^0.100.0",
     "slate-history": "^0.100.0",
     "slate-react": "^0.100.0",
+    "swiper": "^11.0.3",
     "tailwindcss": "^3.3.3",
     "webfontloader": "^1.6.28"
   },
