--- a/package.json
+++ b/package.json
@@ -30,13 +30,13 @@
     "@types/react-star-rating-component": "^1.4.3",
     "antd": "^5.8.5",
     "autoprefixer": "^10.4.16",
+    "epubjs": "^0.3.93",
     "postcss": "^8.4.30",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-grid-layout": "^1.4.2",
     "react-image-file-resizer": "^0.4.8",
     "react-rating-star-with-type": "^1.2.1",
-    "react-reader": "^2.0.4",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.4",
     "slate": "^0.100.0",
@@ -44,7 +44,6 @@
     "slate-react": "^0.100.0",
     "swiper": "^11.0.3",
     "tailwindcss": "^3.3.3",
-    "use-local-storage-state": "^19.1.0",
     "webfontloader": "^1.6.28"
   },
   "devDependencies": {
