--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,11 +29,8 @@
     "src/ugd_frontend/src/header/settings/AuthorFilter.jsx",
     "src/ugd_frontend/src/header/SearchBar.jsx",
     "src/ugd_frontend/utils/useAuthorBooks.jsx",
-    "src/ugd_frontend/src/components/ReactSlider/ReactSlider.jsx", 
-    "src/ugd_frontend/src/pages/Book.jsx",
+    "src/ugd_frontend/src/components/ReactSlider/ReactSlider.jsx",
+    "src/ugd_frontend/src/pages/Book.jsx"
   ],
-  "exclude": [
-    "node_modules", 
-    "src/ugd_frontend/src/Reader/**/*.js"
-  ]
+  "exclude": ["node_modules", "src/ugd_frontend/src/Reader/**/*.js"]
 }
