--- a/src/ugd_backend/Cargo.toml
+++ b/src/ugd_backend/Cargo.toml
@@ -12,6 +12,6 @@ ciborium = "0.2.1"
 ic-cdk = "0.7.0"
 ic-cdk-macros = "0.7.1"
 ic-cdk-timers = "0.1"
-# serde_json = "1.0"
+serde_json = "1.0"
 ic-stable-structures = "0.6.0"
 serde = { version = "1.0", features = ["derive"] }
