--- a/package.json
+++ b/package.json
@@ -30,10 +30,13 @@
     "@types/react-star-rating-component": "^1.4.3",
     "antd": "^5.8.5",
     "autoprefixer": "^10.4.16",
+    "epubjs": "^0.3.93",
+    "html-to-text": "^9.0.5",
     "postcss": "^8.4.30",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-grid-layout": "^1.4.2",
+    "react-icons": "^4.12.0",
     "react-image-file-resizer": "^0.4.8",
     "react-rating-star-with-type": "^1.2.1",
     "semantic-ui-css": "^2.5.0",
@@ -50,6 +53,7 @@
     "@babel/preset-env": "^7.22.15",
     "@babel/preset-react": "^7.22.15",
     "@svgr/webpack": "^8.1.0",
+    "@types/html-to-text": "^9.0.4",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.14",
     "@types/react-grid-layout": "^1.3.3",
