--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@hello-pangea/dnd": "^16.3.0",
     "@types/react-star-rating-component": "^1.4.3",
     "antd": "^5.8.5",
     "autoprefixer": "^10.4.16",
