--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "webfontloader": "^1.6.28"
   },
   "devDependencies": {
+    "@dfinity/auth-client": "^0.20.2",
+    "@dfinity/identity": "^0.20.2",
     "@babel/core": "^7.22.15",
     "@babel/preset-env": "^7.22.15",
     "@babel/preset-react": "^7.22.15",
