--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "html-to-text": "^9.0.5",
     "postcss": "^8.4.30",
     "react": "^18.2.0",
+    "react-csv": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-grid-layout": "^1.4.2",
     "react-icons": "^4.12.0",
@@ -58,6 +59,7 @@
     "@svgr/webpack": "^8.1.0",
     "@types/html-to-text": "^9.0.4",
     "@types/react": "^18.2.21",
+    "@types/react-csv": "^1.1.10",
     "@types/react-dom": "^18.2.14",
     "@types/react-grid-layout": "^1.3.3",
     "assert": "2.0.0",
