--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@hello-pangea/dnd": "^16.3.0",
+    "@junobuild/core": "^0.0.44",
     "@types/react-star-rating-component": "^1.4.3",
     "antd": "^5.8.5",
     "autoprefixer": "^10.4.16",
     "epubjs": "^0.3.93",
     "html-to-text": "^9.0.5",
+    "nanoid": "^5.0.4",
     "postcss": "^8.4.30",
     "react": "^18.2.0",
     "react-csv": "^2.2.2",
@@ -51,11 +53,11 @@
     "webfontloader": "^1.6.28"
   },
   "devDependencies": {
-    "@dfinity/auth-client": "^0.20.2",
-    "@dfinity/identity": "^0.20.2",
     "@babel/core": "^7.22.15",
     "@babel/preset-env": "^7.22.15",
     "@babel/preset-react": "^7.22.15",
+    "@dfinity/auth-client": "^0.20.2",
+    "@dfinity/identity": "^0.20.2",
     "@svgr/webpack": "^8.1.0",
     "@types/html-to-text": "^9.0.4",
     "@types/react": "^18.2.21",
