--- a/src/ugd_backend/Cargo.toml
+++ b/src/ugd_backend/Cargo.toml
@@ -9,6 +9,7 @@ crate-type = ["cdylib"]
 [dependencies]
 candid = "0.8.2"
 ciborium = "0.2.1"
+csv = "1.1.6"
 ic-cdk = "0.7.0"
 ic-cdk-macros = "0.7.1"
 ic-cdk-timers = "0.1"
