--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@hello-pangea/dnd": "^16.3.0",
     "@junobuild/core": "^0.0.44",
+    "@mlc-ai/web-llm": "^0.2.18",
     "@types/react-star-rating-component": "^1.4.3",
     "antd": "^5.8.5",
     "autoprefixer": "^10.4.16",
