--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "autoprefixer": "^10.4.16",
     "epubjs": "^0.3.93",
     "html-to-text": "^9.0.5",
+    "meilisearch": "^0.37.0",
     "nanoid": "^5.0.4",
     "postcss": "^8.4.30",
     "react": "^18.2.0",
