Bare UI search manager complete.

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@hello-pangea/dnd": "^16.3.0",
     "@junobuild/core": "^0.0.44",
+    "@meilisearch/instant-meilisearch": "^0.17.0",
     "@mlc-ai/web-llm": "^0.2.18",
     "@reduxjs/toolkit": "^2.2.1",
     "@types/react-star-rating-component": "^1.4.3",
@@ -36,8 +37,11 @@
     "autoprefixer": "^10.4.16",
     "epubjs": "^0.3.93",
     "html-to-text": "^9.0.5",
+    "instantsearch.css": "^8.1.0",
+    "instantsearch.js": "^4.66.0",
     "meilisearch": "^0.37.0",
     "nanoid": "^5.0.4",
+    "papaparse": "^5.4.1",
     "postcss": "^8.4.30",
     "react": "^18.2.0",
     "react-csv": "^2.2.2",
@@ -45,6 +49,7 @@
     "react-grid-layout": "^1.4.2",
     "react-icons": "^4.12.0",
     "react-image-file-resizer": "^0.4.8",
+    "react-instantsearch-dom": "^6.40.4",
     "react-rating-star-with-type": "^1.2.1",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.4",
