--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@hello-pangea/dnd": "^16.3.0",
-    "@junobuild/core": "^0.0.44",
+    "@junobuild/core": "github:zeeghazi/juno-core#main",
     "@meilisearch/instant-meilisearch": "^0.17.0",
     "@mlc-ai/web-llm": "^0.2.18",
     "@reduxjs/toolkit": "^2.2.1",
