--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@dfinity/auth-client": "^1.2.0",
     "@dfinity/candid": "^1.2.0",
     "@dfinity/identity": "^1.2.0",
+    "@dfinity/ledger-icp": "^2.2.2",
     "@dfinity/principal": "^1.2.0",
     "@emotion/css": "^11.11.2",
     "@emotion/react": "^11.11.1",
