--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-icons": "^4.12.0",
     "react-image-file-resizer": "^0.4.8",
     "react-instantsearch-dom": "^6.40.4",
+    "react-modal": "^3.16.1",
     "react-rating-star-with-type": "^1.2.1",
     "react-responsive-masonry": "^2.2.0",
     "semantic-ui-css": "^2.5.0",
