--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "@types/react-csv": "^1.1.10",
     "@types/react-dom": "^18.2.14",
     "@types/react-grid-layout": "^1.3.3",
+    "@types/react-instantsearch-dom": "^6.12.7",
     "@types/react-responsive-masonry": "^2.1.3",
     "assert": "2.0.0",
     "babel-loader": "^9.1.3",
