--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "autoprefixer": "^10.4.16",
     "epubjs": "^0.3.93",
     "flatted": "^3.3.1",
+    "formik": "^2.4.6",
     "html-to-text": "^9.0.5",
     "install": "^0.13.0",
     "instantsearch.css": "^8.1.0",
@@ -66,7 +67,8 @@
     "slate-react": "^0.100.0",
     "swiper": "^11.0.3",
     "tailwindcss": "^3.3.3",
-    "webfontloader": "^1.6.28"
+    "webfontloader": "^1.6.28",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.22.15",
