--- a/src/bookmarks/Cargo.toml
+++ b/src/bookmarks/Cargo.toml
@@ -7,11 +7,14 @@ edition = "2021"
 crate-type = ["cdylib"]
 
 [dependencies]
-candid = "0.8.2"
-ciborium = "0.2.1"
-ic-cdk = "0.7.0"
-ic-cdk-macros = "0.7.1"
-ic-cdk-timers = "0.1"
+candid = "0.10"
+ciborium = "0.2.2"
+ic-cdk = "0.12"
+ic-cdk-macros = "0.13.2"
+ic-cdk-timers = "0.6"
+ic-ledger-types = "0.10"
+ic-stable-structures = "0.6.4"
+icrc-ledger-types = "0.1.5"
 serde_json = "1.0"
-ic-stable-structures = "0.6.0"
 serde = { version = "1.0", features = ["derive"] }
+
