--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "papaparse": "^5.4.1",
     "postcss": "^8.4.30",
     "react": "^18.2.0",
+    "react-circle-flags": "^0.0.20",
     "react-csv": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-grid-layout": "^1.4.2",
