Fixed wallets from where deductions will be done, fixed bugs, updated return types.

--- a/src/bookmarks/Cargo.toml
+++ b/src/bookmarks/Cargo.toml
@@ -18,3 +18,4 @@ icrc-ledger-types = "0.1.5"
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 sha2 = "0.10.8"
+num-bigint = "0.4.4"
