Added encrypted keystore.

--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "react-responsive-masonry": "^2.2.0",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.4",
+    "sjcl": "^1.0.8",
     "slate": "^0.100.0",
     "slate-history": "^0.100.0",
     "slate-react": "^0.100.0",
@@ -89,6 +90,7 @@
     "@types/react-grid-layout": "^1.3.3",
     "@types/react-instantsearch-dom": "^6.12.7",
     "@types/react-responsive-masonry": "^2.1.3",
+    "@types/sjcl": "^1.0.34",
     "assert": "^2.0.0",
     "babel-loader": "^9.1.3",
     "buffer": "^6.0.3",
