--- a/src/ugd_backend/Cargo.toml
+++ b/src/ugd_backend/Cargo.toml
@@ -15,3 +15,4 @@ ic-cdk-timers = "0.6"
 serde_json = "1.0"
 ic-stable-structures = "0.6.4"
 serde = { version = "1.0", features = ["derive"] }
+sha2 = "0.10.8"
