--- a/package.json
+++ b/package.json
@@ -35,11 +35,16 @@
     "@junobuild/core": "github:zeeghazi/juno-core#main",
     "@meilisearch/instant-meilisearch": "^0.17.0",
     "@mlc-ai/web-llm": "^0.2.18",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-slot": "^1.0.2",
     "@reduxjs/toolkit": "^2.2.5",
+    "@solana/wallet-adapter-phantom": "^0.9.24",
     "@types/react-star-rating-component": "^1.4.3",
+    "@walletconnect/web3-provider": "^1.8.0",
     "antd": "^5.8.5",
     "autoprefixer": "^10.4.16",
     "browserify-zlib": "^0.2.0",
+    "class-variance-authority": "^0.7.0",
     "epubjs": "^0.3.93",
     "ethers": "^6.13.0",
     "flatted": "^3.3.1",
@@ -48,8 +53,10 @@
     "install": "^0.13.0",
     "instantsearch.css": "^8.1.0",
     "instantsearch.js": "^4.66.0",
+    "lucide-react": "^0.394.0",
     "meilisearch": "^0.37.0",
     "nanoid": "^5.0.4",
+    "near-api-js": "^4.0.2",
     "npm": "^10.5.0",
     "papaparse": "^5.4.1",
     "path": "^0.12.7",
@@ -66,6 +73,7 @@
     "react-modal": "^3.16.1",
     "react-rating-star-with-type": "^1.2.1",
     "react-responsive-masonry": "^2.2.0",
+    "react-select": "^5.8.0",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.4",
     "sjcl": "^1.0.8",
@@ -73,6 +81,7 @@
     "slate-history": "^0.100.0",
     "slate-react": "^0.100.0",
     "swiper": "^11.0.3",
+    "tailwind-merge": "^2.3.0",
     "tailwindcss": "^3.3.3",
     "webfontloader": "^1.6.28",
     "yup": "^1.4.0"
