--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ugd_frontend",
+  "name": "ucg_frontend",
   "version": "0.1.0",
   "description": "Internet Computer starter application",
   "keywords": [
