Updated cargo toolchains to cdk V13.2. Added terrys icrc7 implementation canisters.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ members = [
     "src/icp_swap",
     "src/librarians",
     "src/tokenomics",
-    "src/NFT/examples/ucg_nft",
+    "src/icrc7",
+    "src/icrc7_archive",
 ]
 resolver = "2"
