--- a/src/icrc7/Cargo.toml
+++ b/src/icrc7/Cargo.toml
@@ -1,7 +1,9 @@
 [package]
-name = "bookmarks"
+name = "icrc7"
 version = "0.1.0"
 edition = "2021"
+
+# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [lib]
 crate-type = ["cdylib"]
@@ -11,11 +13,13 @@ candid = "0.10.7"
 ciborium = "0.2.1"
 ic-cdk = "0.13.2"
 ic-cdk-macros = "0.13.2"
-ic-cdk-timers = "0.7.0"
-ic-ledger-types = "0.9.0"
 ic-stable-structures = "0.6.1"
+ic-certified-map = "0.4"
 icrc-ledger-types = "0.1.5"
-num-bigint = "0.4.4"
-serde_json = "1.0"
 serde = { version = "1.0.188", features = ["derive"] }
+serde_bytes = "0.11"
+serde_cbor = "0.11.2"
+crc32fast = "1.3"
 sha2 = "0.10.2"
+hex = "0.4"
+ic-cdk-timers = "0.7.0"
