--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "autoprefixer": "^10.4.16",
     "browserify-zlib": "^0.2.0",
     "class-variance-authority": "^0.7.0",
+    "crypto": "^1.0.1",
+    "elliptic": "^6.5.5",
     "epubjs": "^0.3.93",
     "ethers": "^6.13.1",
     "flatted": "^3.3.1",
@@ -92,6 +94,7 @@
     "@babel/preset-react": "^7.22.15",
     "@svgr/webpack": "^8.1.0",
     "@types/antd": "^1.0.0",
+    "@types/elliptic": "^6.4.18",
     "@types/html-to-text": "^9.0.4",
     "@types/react": "^18.2.21",
     "@types/react-csv": "^1.1.10",
