--- a/src/alex_backend/Cargo.toml
+++ b/src/alex_backend/Cargo.toml
@@ -10,6 +10,7 @@ crate-type = ["cdylib"]
 candid = "0.10.7"
 ciborium = "0.2.1"
 ic-cdk = "0.13.2"
+icrc-ledger-types = "0.1.5"
 ic-cdk-macros = "0.13.2"
 ic-cdk-timers = "0.7.0"
 serde_json = "1.0"
