--- a/src/nft_manager/Cargo.toml
+++ b/src/nft_manager/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 crate-type = ["cdylib"]
 
 [dependencies]
+arrayvec = "0.7.6"
 candid = "0.10.7"
 ciborium = "0.2.1"
 ic-cdk = "0.13.2"
