--- a/src/icp_swap/Cargo.toml
+++ b/src/icp_swap/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 crate-type = ["cdylib"]
 
 [dependencies]
-candid = "0.10.7"
+candid = { version = "0.10.7", features = ["value"] }
 ic-cdk = "0.13.2"
 ic-cdk-macros = "0.13.2"
 ic-ledger-types = "0.9.0"
@@ -22,3 +22,4 @@ hex = "0.4.3"
 num-traits = "0.2.19"
 rustic = "0.1.9"
 futures = "0.3.30"
+serde_json = "1.0"
