--- a/src/tokenomics/Cargo.toml
+++ b/src/tokenomics/Cargo.toml
@@ -22,3 +22,4 @@ serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 sha2 = "0.10.8"
 num-traits = "0.2.19"
+rand_chacha = "0.3.1"
