add seperate canisters for system_api, vetkd, alex_wallet and alex_librarian

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,9 @@
 [workspace]
 members = [
     "src/alex_backend",
+    "src/alex_librarian",
+    "src/system_api",
+    "src/vetkd",
     "src/bookmarks",
     "src/icp_swap",
     "src/tokenomics",
