--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@walletconnect/web3-provider": "^1.8.0",
     "antd": "^5.8.5",
     "autoprefixer": "^10.4.16",
+    "azle": "^0.23.0",
     "browserify-zlib": "^0.2.0",
     "class-variance-authority": "^0.7.0",
     "epubjs": "^0.3.93",
@@ -93,6 +94,7 @@
     "@svgr/webpack": "^8.1.0",
     "@types/antd": "^1.0.0",
     "@types/html-to-text": "^9.0.4",
+    "@types/pako": "^2.0.3",
     "@types/react": "^18.2.21",
     "@types/react-csv": "^1.1.10",
     "@types/react-dom": "^18.2.14",
@@ -100,6 +102,7 @@
     "@types/react-instantsearch-dom": "^6.12.7",
     "@types/react-responsive-masonry": "^2.1.3",
     "@types/sjcl": "^1.0.34",
+    "@types/text-encoding": "^0.0.39",
     "assert": "^2.0.0",
     "babel-loader": "^9.1.3",
     "buffer": "^6.0.3",
