--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "ethers": "^6.13.2",
     "flatted": "^3.3.1",
     "formik": "^2.4.6",
+    "github-markdown-css": "^5.6.1",
     "html-to-text": "^9.0.5",
     "ic-vetkd-utils": "file:ic-vetkd-utils-0.1.0.tgz",
     "install": "^0.13.0",
@@ -72,6 +73,7 @@
     "react-icons": "^5.3.0",
     "react-image-file-resizer": "^0.4.8",
     "react-instantsearch-dom": "^6.40.4",
+    "react-markdown": "^9.0.1",
     "react-modal": "^3.16.1",
     "react-rating-star-with-type": "^1.2.2",
     "react-responsive-masonry": "^2.3.0",
