NFT Initial State. Alexandian app queries arweave.

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@types/react-star-rating-component": "^1.4.4",
     "@walletconnect/web3-provider": "^1.8.0",
     "antd": "^5.20.5",
+    "arcframework": "^1.2.47",
     "autoprefixer": "^10.4.20",
     "azle": "^0.24.1",
     "browserify-zlib": "^0.2.0",
@@ -85,6 +86,7 @@
     "slate": "^0.103.0",
     "slate-history": "^0.109.0",
     "slate-react": "^0.110.0",
+    "styled-components": "^6.1.13",
     "swiper": "^11.1.12",
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "^3.4.10",
