--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "react-rating-star-with-type": "^1.2.2",
     "react-responsive-masonry": "^2.3.0",
     "react-select": "^5.8.0",
+    "react-syntax-highlighter": "^15.5.0",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.5",
     "sjcl": "^1.0.8",
@@ -108,6 +109,7 @@
     "@types/react-grid-layout": "^1.3.5",
     "@types/react-instantsearch-dom": "^6.12.8",
     "@types/react-responsive-masonry": "^2.1.3",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "@types/sjcl": "^1.0.34",
     "@types/text-encoding": "^0.0.39",
     "assert": "^2.1.0",
