--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@irys/sdk": "^0.2.11",
     "@meilisearch/instant-meilisearch": "^0.20.0",
     "@reduxjs/toolkit": "^2.2.7",
+    "@tensorflow/tfjs": "^4.21.0",
     "antd": "^5.20.5",
     "autoprefixer": "^10.4.20",
     "azle": "^0.24.1",
