config updates, permasearch notes

--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "meilisearch": "^0.42.0",
     "nanoid": "^5.0.7",
     "npm": "^10.8.3",
-    "nsfwjs": "^4.1.0",
+    "nsfwjs": "^4.2.0",
     "papaparse": "^5.4.1",
     "path": "^0.12.7",
     "path-browserify": "^1.0.1",
@@ -63,6 +63,7 @@
     "react-instantsearch-dom": "^6.40.4",
     "react-markdown": "^9.0.1",
     "react-rating-star-with-type": "^1.2.2",
+    "react-redux": "^9.1.2",
     "react-responsive-masonry": "^2.3.0",
     "react-syntax-highlighter": "^15.5.0",
     "styled-components": "^6.1.13",
