--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "5.6.0",
     "https-browserify": "^1.0.0",
+    "null-loader": "^4.0.1",
     "os-browserify": "^0.3.0",
     "postcss-loader": "^8.1.1",
     "postcss-nested": "^6.2.0",
@@ -121,6 +122,7 @@
     "util": "0.12.5",
     "vm-browserify": "^1.1.2",
     "webpack": "^5.94.0",
+    "webpack-bundle-analyzer": "^4.10.2",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.1.0"
   },
