--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "@types/text-encoding": "^0.0.39",
     "assert": "^2.1.0",
     "babel-loader": "^9.1.3",
+    "babel-plugin-transform-imports": "^2.0.0",
     "buffer": "^6.0.3",
     "copy-webpack-plugin": "^12.0.2",
     "crypto-browserify": "^3.12.0",
