--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "@tensorflow/tfjs": "^4.21.0",
     "antd": "^5.20.5",
     "autoprefixer": "^10.4.20",
-    "azle": "^0.24.1",
+    "azle": "^0.24.2-rc.46",
     "browserify-zlib": "^0.2.0",
     "epubjs": "^0.3.93",
     "ethers": "^6.13.2",
