--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "lucide-react": "^0.452.0",
     "meilisearch": "^0.42.0",
     "nanoid": "^5.0.7",
+    "next-themes": "^0.3.0",
     "npm": "^10.8.3",
     "nsfwjs": "^4.2.0",
     "papaparse": "^5.4.1",
@@ -73,6 +74,7 @@
     "react-redux": "^9.1.2",
     "react-responsive-masonry": "^2.3.0",
     "react-syntax-highlighter": "^15.5.0",
+    "sonner": "^1.5.0",
     "styled-components": "^6.1.13",
     "swiper": "^11.1.12",
     "tailwind-merge": "^2.5.3",
