--- a/package.json
+++ b/package.json
@@ -1,141 +1,284 @@
 {
+
   "name": "alex_frontend",
+
   "version": "0.1.0",
+
   "description": "Internet Computer starter application",
+
   "keywords": [
+
     "Internet Computer",
+
     "Motoko",
+
     "JavaScript",
+
     "Canister"
+
   ],
+
   "scripts": {
+
     "dev": "webpack serve --mode development --open",
+
     "build": "webpack",
+
     "prebuild": "dfx generate",
+
     "start": "webpack serve --mode development --env development",
+
     "deploy:local": "dfx deploy --network=local",
+
     "deploy:ic": "dfx deploy --network=ic",
+
     "generate": "dfx generate alex_backend"
+
   },
+
   "dependencies": {
+
     "@apollo/client": "^3.11.8",
+
     "@dfinity/agent": "^2.0.0",
+
     "@dfinity/auth-client": "^2.0.0",
+
     "@dfinity/candid": "^2.0.0",
+
     "@dfinity/identity": "^2.0.0",
+
     "@dfinity/ledger-icp": "^2.5.0",
+
     "@dfinity/principal": "^2.0.0",
+
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
+
     "@fortawesome/free-regular-svg-icons": "^6.6.0",
+
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
+
     "@fortawesome/react-fontawesome": "^0.2.2",
+
     "@irys/sdk": "^0.2.11",
+
     "@meilisearch/instant-meilisearch": "^0.20.0",
+
     "@radix-ui/react-dialog": "^1.1.2",
+
     "@radix-ui/react-label": "^2.1.0",
+
     "@radix-ui/react-slot": "^1.1.0",
+
     "@radix-ui/react-toast": "^1.2.2",
+
     "@reduxjs/toolkit": "^2.2.7",
+
     "@tensorflow/tfjs": "^4.21.0",
+
     "antd": "^5.20.5",
+
     "autoprefixer": "^10.4.20",
+
     "axios": "^1.7.7",
+
     "azle": "^0.24.2-rc.46",
+
     "babel-loader": "^9.2.1",
+
     "browserify-zlib": "^0.2.0",
+
     "class-variance-authority": "^0.7.0",
+
     "clsx": "^2.1.1",
+
     "epubjs": "^0.3.93",
+
     "ethers": "^6.13.2",
+
     "flatted": "^3.3.1",
+
     "formik": "^2.4.6",
+
     "github-markdown-css": "^5.6.1",
+
     "html-to-text": "^9.0.5",
+
     "ic-mops": "^1.0.1",
+
     "ic-vetkd-utils": "file:ic-vetkd-utils-0.1.0.tgz",
+
     "instantsearch.css": "^8.5.0",
+
     "instantsearch.js": "^4.74.0",
+
     "lucide-react": "^0.452.0",
+
     "meilisearch": "^0.42.0",
+
     "nanoid": "^5.0.7",
+
     "next-themes": "^0.3.0",
+
     "npm": "^10.8.3",
+
     "nsfwjs": "^4.2.0",
+
     "papaparse": "^5.4.1",
+
     "path": "^0.12.7",
+
     "path-browserify": "^1.0.1",
+
     "postcss": "^8.4.45",
+
     "react": "^18.3.1",
+
     "react-circle-flags": "^0.0.20",
+
     "react-csv": "^2.2.2",
+
     "react-dom": "^18.3.1",
+
     "react-instantsearch-dom": "^6.40.4",
+
     "react-markdown": "^9.0.1",
+
+    "react-qr-code": "^2.0.15",
+
     "react-rating-star-with-type": "^1.2.2",
+
     "react-redux": "^9.1.2",
+
     "react-responsive-masonry": "^2.3.0",
+
     "react-syntax-highlighter": "^15.5.0",
+
     "sonner": "^1.5.0",
+
     "styled-components": "^6.1.13",
+
     "swiper": "^11.1.12",
+
     "tailwind-merge": "^2.5.3",
+
     "tailwindcss": "^3.4.10",
+
     "tailwindcss-animate": "^1.0.7",
+
     "webfontloader": "^1.6.28",
+
     "yup": "^1.4.0"
+
   },
+
   "devDependencies": {
+
     "@babel/core": "^7.25.2",
+
     "@babel/preset-env": "^7.25.4",
+
     "@babel/preset-react": "^7.24.7",
+
     "@svgr/webpack": "^8.1.0",
+
     "@types/antd": "^1.0.0",
+
     "@types/html-to-text": "^9.0.4",
+
     "@types/pako": "^2.0.3",
+
     "@types/react": "^18.3.5",
+
     "@types/react-csv": "^1.1.10",
+
     "@types/react-dom": "^18.3.0",
+
     "@types/react-instantsearch-dom": "^6.12.8",
+
     "@types/react-responsive-masonry": "^2.1.3",
+
     "@types/react-syntax-highlighter": "^15.5.13",
+
     "@types/sjcl": "^1.0.34",
+
     "@types/text-encoding": "^0.0.39",
+
     "assert": "^2.1.0",
+
     "buffer": "^6.0.3",
+
     "copy-webpack-plugin": "^12.0.2",
+
     "crypto-browserify": "^3.12.0",
+
     "css-loader": "^7.1.2",
+
     "dotenv": "^16.4.5",
+
     "events": "3.3.0",
+
     "file-loader": "^6.2.0",
+
     "html-webpack-plugin": "5.6.0",
+
     "https-browserify": "^1.0.0",
+
     "null-loader": "^4.0.1",
+
     "os-browserify": "^0.3.0",
+
     "postcss-loader": "^8.1.1",
+
     "postcss-nested": "^6.2.0",
+
     "process": "^0.11.10",
+
     "react-router-dom": "^6.26.1",
+
     "stream-browserify": "^3.0.0",
+
     "stream-http": "^3.2.0",
+
     "style-loader": "^4.0.0",
+
     "terser-webpack-plugin": "^5.3.10",
+
     "ts-loader": "^9.5.1",
+
     "url": "^0.11.4",
+
     "util": "0.12.5",
+
     "vm-browserify": "^1.1.2",
+
     "webpack": "^5.94.0",
+
     "webpack-bundle-analyzer": "^4.10.2",
+
     "webpack-cli": "^5.1.4",
+
     "webpack-dev-server": "^5.1.0"
+
   },
+
   "engines": {
+
     "node": "^12 || ^14 || ^16 || ^18 || ^20"
+
   },
+
   "browserslist": [
+
     "last 2 chrome version",
+
     "last 2 firefox version",
+
     "last 2 safari version",
+
     "last 2 edge version"
+
   ]
+
 }
+
