--- a/package.json
+++ b/package.json
@@ -64,13 +64,21 @@
 
     "@meilisearch/instant-meilisearch": "^0.20.0",
 
+    "@radix-ui/react-checkbox": "^1.1.2",
+
     "@radix-ui/react-dialog": "^1.1.2",
+
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
 
     "@radix-ui/react-label": "^2.1.0",
 
     "@radix-ui/react-slot": "^1.1.0",
 
     "@radix-ui/react-toast": "^1.2.2",
+
+    "@radix-ui/react-toggle": "^1.1.0",
+
+    "@radix-ui/react-toggle-group": "^1.1.0",
 
     "@reduxjs/toolkit": "^2.2.7",
 
