--- a/package.json
+++ b/package.json
@@ -72,6 +72,8 @@
 
     "@radix-ui/react-label": "^2.1.0",
 
+    "@radix-ui/react-slider": "^1.2.1",
+
     "@radix-ui/react-slot": "^1.1.0",
 
     "@radix-ui/react-toast": "^1.2.2",
