--- a/package.json
+++ b/package.json
@@ -64,6 +64,8 @@
 
     "@meilisearch/instant-meilisearch": "^0.20.0",
 
+    "@radix-ui/react-alert-dialog": "^1.1.2",
+
     "@radix-ui/react-checkbox": "^1.1.2",
 
     "@radix-ui/react-dialog": "^1.1.2",
