--- a/src/nft_manager/Cargo.toml
+++ b/src/nft_manager/Cargo.toml
@@ -18,3 +18,5 @@ serde_json = "1.0"
 ic-stable-structures = "0.6.1"
 serde = { version = "1.0.188", features = ["derive"] }
 sha2 = "0.10.2"
+num-traits = "0.2.15"
+num-bigint = "0.4"
