--- a/src/nft_manager/Cargo.toml
+++ b/src/nft_manager/Cargo.toml
@@ -10,6 +10,7 @@ crate-type = ["cdylib"]
 arrayvec = "0.7.6"
 candid = "0.10.7"
 ciborium = "0.2.1"
+crc32fast = "1.3.0"
 ic-cdk = "0.13.2"
 icrc-ledger-types = "0.1.5"
 ic-cdk-macros = "0.13.2"
@@ -20,3 +21,4 @@ serde = { version = "1.0.188", features = ["derive"] }
 sha2 = "0.10.2"
 num-traits = "0.2.15"
 num-bigint = "0.4"
+hex = "0.4.3"
