--- a/src/tests/Cargo.toml
+++ b/src/tests/Cargo.toml
@@ -4,7 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 [lib]
-path = "lib.rs"
 crate-type = ["cdylib"]
 
 [dependencies]
@@ -14,3 +13,4 @@ ic-cdk-macros = "0.13.2"
 ic-ledger-types = "0.9.0"
 serde = { version = "1.0.188", features = ["derive"] }
 serde_derive = "1.0.197"
+icrc-ledger-types = "0.1.5"
