--- a/src/emporium/Cargo.toml
+++ b/src/emporium/Cargo.toml
@@ -19,3 +19,6 @@ serde_bytes = "0.11.5"
 serde_json = "1.0"
 icrc-ledger-types = "0.1.5"
 num-bigint = "0.4.4"
+ic-types = "0.7.0"
+ic-ledger-types = "0.9.0"
+
