--- a/package.json
+++ b/package.json
@@ -82,6 +82,8 @@
 
     "@radix-ui/react-slot": "^1.1.0",
 
+    "@radix-ui/react-switch": "^1.1.1",
+
     "@radix-ui/react-tabs": "^1.1.1",
 
     "@radix-ui/react-toast": "^1.2.2",
