--- a/src/tests/Cargo.toml
+++ b/src/tests/Cargo.toml
@@ -9,6 +9,7 @@ crate-type = ["cdylib"]
 [dependencies]
 candid = { version = "0.10.7", features = ["value"] }
 ic-cdk = "0.13.2"
+ic-cdk-timers = "0.7.0"
 ic-cdk-macros = "0.13.2"
 ic-ledger-types = "0.9.0"
 serde = { version = "1.0.188", features = ["derive"] }
