--- a/package.json
+++ b/package.json
@@ -78,6 +78,8 @@
 
     "@radix-ui/react-scroll-area": "^1.2.1",
 
+    "@radix-ui/react-separator": "^1.1.1",
+
     "@radix-ui/react-slider": "^1.2.1",
 
     "@radix-ui/react-slot": "^1.1.0",
