logsCanister rename to logs

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,11 +8,11 @@ members = [
     "src/registry",
     "src/tokenomics",
     "src/nft_manager",
-    "src/tests",
+    "src/logs",
     "src/xrc",
     "src/user",
     "src/emporium",
-    "src/logCanister"
+    "src/logs"
 
 ]
 resolver = "2"
