--- a/package.json
+++ b/package.json
@@ -110,11 +110,14 @@
 
     "browserify-zlib": "^0.2.0",
 
+
     "class-variance-authority": "^0.7.0",
 
     "clsx": "^2.1.1",
 
     "date-fns": "^3.6.0",
+
+    "echarts": "^5.6.0",
 
     "epubjs": "^0.3.93",
 
@@ -161,6 +164,8 @@
     "postcss": "^8.4.45",
 
     "react": "^18.3.1",
+
+  
 
     "react-circle-flags": "^0.0.20",
 
