--- a/package.json
+++ b/package.json
@@ -96,6 +96,12 @@
 
     "@reduxjs/toolkit": "^2.2.7",
 
+    "@solana/wallet-adapter-base": "^0.9.23",
+
+    "@solana/wallet-adapter-react": "^0.15.35",
+
+    "@solana/wallet-adapter-react-ui": "^0.9.35",
+
     "@tanstack/react-query": "^5.62.8",
 
     "@tensorflow/tfjs": "^4.21.0",
@@ -137,6 +143,8 @@
     "ic-use-internet-identity": "^0.1.0",
 
     "ic-use-siwe-identity": "^0.1.2",
+
+    "ic-use-siws-identity": "^0.0.1",
 
     "ic-vetkd-utils": "file:ic-vetkd-utils-0.1.0.tgz",
 
