Major apps updates. Performance, buttons, topup warning.

--- a/package.json
+++ b/package.json
@@ -66,7 +66,11 @@
 
     "@radix-ui/react-alert-dialog": "^1.1.2",
 
+    "@radix-ui/react-aspect-ratio": "^1.1.1",
+
     "@radix-ui/react-checkbox": "^1.1.2",
+
+    "@radix-ui/react-collapsible": "^1.1.2",
 
     "@radix-ui/react-dialog": "^1.1.2",
 
@@ -75,6 +79,8 @@
     "@radix-ui/react-label": "^2.1.0",
 
     "@radix-ui/react-popover": "^1.1.2",
+
+    "@radix-ui/react-progress": "^1.1.1",
 
     "@radix-ui/react-scroll-area": "^1.2.1",
 
@@ -95,6 +101,8 @@
     "@radix-ui/react-toggle": "^1.1.0",
 
     "@radix-ui/react-toggle-group": "^1.1.0",
+
+    "@radix-ui/react-tooltip": "^1.1.6",
 
     "@reduxjs/toolkit": "^2.5.0",
 
@@ -156,6 +164,10 @@
 
     "instantsearch.js": "^4.74.0",
 
+    "lodash": "^4.17.21",
+
+    "lru-cache": "^11.0.2",
+
     "lucide-react": "^0.452.0",
 
     "meilisearch": "^0.42.0",
@@ -202,6 +214,8 @@
 
     "react-router": "^7.0.1",
 
+    "react-router-dom": "^7.1.1",
+
     "react-syntax-highlighter": "^15.5.0",
 
     "sonner": "^1.5.0",
@@ -239,6 +253,8 @@
     "@types/antd": "^1.0.0",
 
     "@types/html-to-text": "^9.0.4",
+
+    "@types/lodash": "^4.17.14",
 
     "@types/pako": "^2.0.3",
 
