--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,8 @@ members = [
     "src/xrc",
     "src/user",
     "src/emporium",
-    "src/logs"
+    "src/logs",
+    "src/icp_swap_factory"
 
 ]
 resolver = "2"
