--- a/package.json
+++ b/package.json
@@ -64,6 +64,8 @@
 
     "@meilisearch/instant-meilisearch": "^0.20.0",
 
+    "@radix-ui/react-accordion": "^1.2.2",
+
     "@radix-ui/react-alert-dialog": "^1.1.2",
 
     "@radix-ui/react-aspect-ratio": "^1.1.1",
@@ -72,7 +74,7 @@
 
     "@radix-ui/react-collapsible": "^1.1.2",
 
-    "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-dialog": "^1.1.4",
 
     "@radix-ui/react-dropdown-menu": "^2.1.2",
 
@@ -131,6 +133,8 @@
     "class-variance-authority": "^0.7.0",
 
     "clsx": "^2.1.1",
+
+    "cmdk": "^1.0.0",
 
     "date-fns": "^3.6.0",
 
