--- a/src/assets_canister/Cargo.toml
+++ b/src/assets_canister/Cargo.toml
@@ -13,4 +13,12 @@ candid = "0.10"
 ic-cdk = "0.16"
 ic-stable-structures = "0.6.1"
 serde = { version = "1.0.188", features = ["derive"] }
+ic-certified-map = "0.4"
+sha2 = "0.10"
+serde_cbor = "0.11"
+hex = "0.4"
+base64 = "0.21"
+
+
+
 
