--- a/package.json
+++ b/package.json
@@ -182,6 +182,8 @@
 
     "npm": "^10.8.3",
 
+    "nprogress": "^0.2.0",
+
     "nsfwjs": "^4.2.0",
 
     "papaparse": "^5.4.1",
@@ -259,6 +261,8 @@
     "@types/html-to-text": "^9.0.4",
 
     "@types/lodash": "^4.17.14",
+
+    "@types/nprogress": "^0.2.3",
 
     "@types/pako": "^2.0.3",
 
