--- a/package.json
+++ b/package.json
@@ -232,6 +232,8 @@
 
     "tailwind-merge": "^2.5.3",
 
+    "tailwind-scrollbar": "^3.1.0",
+
     "tailwindcss": "^3.4.10",
 
     "tailwindcss-animate": "^1.0.7",
