pdf/md/html preview & rendering

--- a/package.json
+++ b/package.json
@@ -118,6 +118,8 @@
 
     "@tensorflow/tfjs": "^4.21.0",
 
+    "@types/dompurify": "^3.0.5",
+
     "antd": "^5.20.5",
 
     "autoprefixer": "^10.4.20",
@@ -137,6 +139,8 @@
     "cmdk": "^1.0.0",
 
     "date-fns": "^3.6.0",
+
+    "dompurify": "^3.2.3",
 
     "echarts": "^5.6.0",
 
