--- a/package.json
+++ b/package.json
@@ -210,6 +210,8 @@
 
     "react-dom": "^18.3.1",
 
+    "react-error-boundary": "^5.0.0",
+
     "react-instantsearch-dom": "^6.40.4",
 
     "react-markdown": "^9.0.1",
