--- a/package.json
+++ b/package.json
@@ -124,6 +124,8 @@
 
     "antd": "^5.20.5",
 
+    "arweave": "^1.15.5",
+
     "autoprefixer": "^10.4.20",
 
     "axios": "^1.7.7",
@@ -158,6 +160,8 @@
 
     "html-to-text": "^9.0.5",
 
+    "human-crypto-keys": "^0.1.4",
+
     "ic-mops": "^1.0.1",
 
     "ic-use-actor": "^0.1.0",
@@ -173,6 +177,8 @@
     "instantsearch.css": "^8.5.0",
 
     "instantsearch.js": "^4.74.0",
+
+    "jwk-to-pem": "^2.0.7",
 
     "lodash": "^4.17.21",
 
@@ -269,6 +275,10 @@
     "@types/antd": "^1.0.0",
 
     "@types/html-to-text": "^9.0.4",
+
+    "@types/human-crypto-keys": "^0.1.3",
+
+    "@types/jwk-to-pem": "^2.0.3",
 
     "@types/lodash": "^4.17.14",
 
