--- a/package.json
+++ b/package.json
@@ -122,6 +122,8 @@
 
     "@types/dompurify": "^3.0.5",
 
+    "@types/react-beautiful-dnd": "^13.1.8",
+
     "antd": "^5.20.5",
 
     "autoprefixer": "^10.4.20",
@@ -201,6 +203,8 @@
     "postcss": "^8.4.45",
 
     "react": "^18.3.1",
+
+    "react-beautiful-dnd": "^13.1.1",
 
     "react-circle-flags": "^0.0.20",
 
