--- a/package.json
+++ b/package.json
@@ -236,6 +236,8 @@
 
     "react-syntax-highlighter": "^15.5.0",
 
+    "remark-gfm": "^4.0.1",
+
     "root": "github:tanstack/react-virtual",
 
     "sonner": "^1.5.0",
@@ -251,6 +253,8 @@
     "tailwindcss": "^3.4.10",
 
     "tailwindcss-animate": "^1.0.7",
+
+    "unist-util-visit": "^5.0.0",
 
     "viem": "^2.21.56",
 
