--- a/package.json
+++ b/package.json
@@ -32,7 +32,13 @@
 
     "deploy:ic": "dfx deploy --network=ic",
 
-    "generate": "dfx generate alex_backend"
+    "generate": "dfx generate alex_backend",
+
+    "test": "jest",
+
+    "test:watch": "jest --watch",
+
+    "test:coverage": "jest --coverage"
 
   },
 
@@ -276,13 +282,23 @@
 
     "@babel/preset-react": "^7.24.7",
 
+    "@babel/preset-typescript": "^7.26.0",
+
     "@svgr/webpack": "^8.1.0",
+
+    "@testing-library/jest-dom": "^6.6.3",
+
+    "@testing-library/react": "^16.2.0",
+
+    "@testing-library/user-event": "^14.6.1",
 
     "@types/antd": "^1.0.0",
 
     "@types/html-to-text": "^9.0.4",
 
     "@types/human-crypto-keys": "^0.1.3",
+
+    "@types/jest": "^29.5.14",
 
     "@types/jwk-to-pem": "^2.0.3",
 
@@ -310,6 +326,8 @@
 
     "assert": "^2.1.0",
 
+    "babel-jest": "^29.7.0",
+
     "buffer": "^6.0.3",
 
     "copy-webpack-plugin": "^12.0.2",
@@ -328,7 +346,13 @@
 
     "https-browserify": "^1.0.0",
 
+    "identity-obj-proxy": "^3.0.0",
+
     "imports-loader": "^5.0.0",
+
+    "jest": "^29.7.0",
+
+    "jest-environment-jsdom": "^29.7.0",
 
     "null-loader": "^4.0.1",
 
