move signing logic away from user canister into alex_wallet canister

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ members = [
     "src/logs",
     "src/xrc",
     "src/user",
+    "src/alex_wallet",
     "src/emporium",
     "src/logs",
     "src/asset_manager"
