--- a/package.json
+++ b/package.json
@@ -264,6 +264,10 @@
 
     "tailwindcss-animate": "^1.0.7",
 
+    "ts-prune": "^0.10.3",
+
+    "ts-unused-exports": "^11.0.1",
+
     "unist-util-visit": "^5.0.0",
 
     "viem": "^2.21.56",
