--- a/src/perpetua/Cargo.toml
+++ b/src/perpetua/Cargo.toml
@@ -18,3 +18,6 @@ ic-stable-structures = "0.6.1"
 serde = { version = "1.0.188", features = ["derive"] }
 sha2 = "0.10.8"
 bs58 = "0.5.0"
+rand = { version = "0.8", default-features = false, features = ["alloc"] }
+rand_core = { version = "0.6", default-features = false }
+rand_chacha = { version = "0.3", default-features = false }
