--- a/package.json
+++ b/package.json
@@ -286,6 +286,10 @@
 
     "@babel/core": "^7.25.2",
 
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+
+    "@babel/plugin-transform-runtime": "^7.27.1",
+
     "@babel/preset-env": "^7.25.4",
 
     "@babel/preset-react": "^7.24.7",
