add ic_siwo backend canister

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,8 +13,8 @@ members = [
     "src/user",
     "src/alex_wallet",
     "src/emporium",
+    "src/ic_siwo",
     "src/logs",
     "src/asset_manager"
-
 ]
 resolver = "2"
