--- a/package.json
+++ b/package.json
@@ -78,6 +78,8 @@
 
     "@radix-ui/react-aspect-ratio": "^1.1.1",
 
+    "@radix-ui/react-avatar": "^1.1.9",
+
     "@radix-ui/react-checkbox": "^1.1.2",
 
     "@radix-ui/react-collapsible": "^1.1.2",
