Removed external price API b/c CORS. ICP balance fetch fix. NPM and webpack updates.

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,6 @@ keys.json
 node_repl_history
 bundle-stats.json
 src/alex_frontend/src/apps/app/Perpetua/state/perpetuaThunks.ts
+
+# Environment files
+.env.production
