--- a/package.json
+++ b/package.json
@@ -242,6 +242,8 @@
 
     "react-instantsearch-dom": "^6.40.4",
 
+    "react-intersection-observer": "^9.16.0",
+
     "react-lazy-load-image-component": "^1.6.3",
 
     "react-markdown": "^9.1.0",
