--- a/src/alex_revshare/Cargo.toml
+++ b/src/alex_revshare/Cargo.toml
@@ -10,6 +10,7 @@ crate-type = ["cdylib"]
 candid = "0.10"
 ic-cdk = "0.13"
 ic-cdk-timers = "0.7"
+icrc-ledger-types = "0.1"
 serde = { version = "1.0", features = ["derive"] }
 
 [dev-dependencies]
